application/brennoflavio/rimgo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rimgo
  namespace: rimgo
  labels:
    app: rimgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rimgo
  template:
    metadata:
      labels:
        app: rimgo
    spec:
      containers:
      - name: rimgo
        image: codeberg.org/rimgo/rimgo:1.3.0
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 128Mi
