application/brennoflavio/rimgo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rimgo
  namespace: rimgo
  labels:
    app: rimgo
spec:
  selector:
    app: rimgo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: rimgo
  type: ClusterIP
