application/brennoflavio/rimgo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rimgo
  namespace: rimgo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
    nginx.ingress.kubernetes.io/server-snippet: |
      set $verified 0;
      if ($cookie_verified = "1") {
        set $verified 1;
      }
    nginx.ingress.kubernetes.io/configuration-snippet: |
      default_type text/html;
      if ($verified = 0) {
        return 418 "<script>document.cookie = 'verified=1; Path=/; Secure; SameSite=Lax; Max-Age=86400';window.location.reload();</script>";
      }
spec:
  ingressClassName: external-nginx
  rules:
  - host: rimgo.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rimgo
            port:
              number: 80
  tls:
  - hosts:
    - rimgo.brennoflavio.com.br
    secretName: rimgo-tls
